[gd_scene load_steps=9 format=3 uid="uid://nph57co4i4fx"]

[ext_resource type="Script" uid="uid://b4edyrd0s1o8t" path="res://Scene/Player/Scripts/NavBar_Action.gd" id="1_qq4ch"]
[ext_resource type="Texture2D" uid="uid://wleaj3ysf2cu" path="res://Assets/Player_GUI/Turn_Label_Background.png" id="3_0mav5"]
[ext_resource type="Texture2D" uid="uid://c8c40jtvwuis8" path="res://Assets/Player_GUI/GRAPHIC_HEADER_CONTAINER.png" id="3_0ufhg"]
[ext_resource type="LabelSettings" uid="uid://dsap870lvcrgo" path="res://Resource/Label/PlayerGUI_Label.tres" id="4_0mav5"]
[ext_resource type="LabelSettings" uid="uid://bh3o87m4a08df" path="res://Resource/Label/Header_Text.tres" id="4_blg5b"]
[ext_resource type="Texture2D" uid="uid://c2cg5pign18hy" path="res://Assets/Player_GUI/SettingButton.png" id="7_2r26y"]
[ext_resource type="LabelSettings" path="res://Resource/Label/Turn_Text.tres" id="7_5al3n"]
[ext_resource type="PackedScene" uid="uid://dk7641f5e36t" path="res://Scene/GUI/Pop_Up_Setting.tscn" id="8_2r26y"]

[node name="Action_Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qq4ch")

[node name="HEADER" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.470588)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 64.0
texture = ExtResource("3_0ufhg")

[node name="Label" type="Label" parent="HEADER"]
layout_mode = 0
offset_left = 182.0
offset_top = 4.0
offset_right = 1190.0
offset_bottom = 60.0
text = "Dummy Text"
label_settings = ExtResource("4_blg5b")
vertical_alignment = 1

[node name="Header_Turn_Label" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 144.0
offset_bottom = 64.0
texture = ExtResource("3_0mav5")

[node name="Label" type="Label" parent="Header_Turn_Label"]
layout_mode = 0
offset_left = 23.0
offset_top = 36.0
offset_right = 63.0
offset_bottom = 44.0
text = "TURN:"
label_settings = ExtResource("4_0mav5")

[node name="Label2" type="Label" parent="Header_Turn_Label"]
layout_mode = 0
offset_left = 63.0
offset_top = 16.0
offset_right = 116.0
offset_bottom = 48.0
text = "1"
label_settings = ExtResource("7_5al3n")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1224.0
offset_top = 8.0
offset_right = 1272.0
offset_bottom = 56.0
texture = ExtResource("7_2r26y")

[node name="Pop-Up" parent="." instance=ExtResource("8_2r26y")]
visible = false
offset_left = 496.0
offset_top = 104.0
offset_right = 640.0
offset_bottom = 360.0
scale = Vector2(2, 2)

[node name="Side_Panels" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="mouse_entered" from="Settings" to="." method="setting_hovered"]
[connection signal="mouse_exited" from="Settings" to="." method="setting_exit_hover"]
